--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-dom": "^18.2.0",
     "@google/genai": "^1.30.0",
     "@supabase/supabase-js": "^2.39.0",
-    "recharts": "^2.10.3"
+    "recharts": "^2.10.3",
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
