--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "@google/genai": "^1.30.0",
-    "@supabase/supabase-js": "^2.39.0",
-    "recharts": "^2.10.3",
-    "react-markdown": "^9.0.1",
-    "remark-gfm": "^4.0.0"
+    "@supabase/supabase-js": "^2.84.0",
+    "recharts": "^3.5.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
+    "pdfjs-dist": "^4.4.168"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
