--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "recharts": "^3.5.0",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
-    "pdfjs-dist": "^4.4.168"
+    "pdfjs-dist": "^4.4.168",
+    "date-fns": "^3.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
